Setima Refatoracao das pendências do projeto e correção de funções para manipulação com o banco de dados